--- a/Pyspark_Chapter_3.ipynb
+++ b/Pyspark_Chapter_3.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/eskayML/AI-FUNAAB/blob/main/Pyspark_Chapter_3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "## IMPORTING AND INITIALIZING SPARK"
       ],
@@ -11,7 +21,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "source": [
+        "!pip install pyspark\n",
+        "!unzip Dataset_Final.zip"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3HfQatXDKf7S",
+        "outputId": "c12387e8-fd1d-45f4-9364-9a8c37db1a92"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Collecting pyspark\n",
+            "  Downloading pyspark-3.5.0.tar.gz (316.9 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m316.9/316.9 MB\u001b[0m \u001b[31m2.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Requirement already satisfied: py4j==0.10.9.7 in /usr/local/lib/python3.10/dist-packages (from pyspark) (0.10.9.7)\n",
+            "Building wheels for collected packages: pyspark\n",
+            "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for pyspark: filename=pyspark-3.5.0-py2.py3-none-any.whl size=317425345 sha256=40a406f4bd44194a35d250dceda7b67cb032219e64cc64ffeceba9b0e6409a87\n",
+            "  Stored in directory: /root/.cache/pip/wheels/41/4e/10/c2cf2467f71c678cfc8a6b9ac9241e5e44a01940da8fbb17fc\n",
+            "Successfully built pyspark\n",
+            "Installing collected packages: pyspark\n",
+            "Successfully installed pyspark-3.5.0\n",
+            "Archive:  Dataset_Final.zip\n",
+            "replace DataSet_final/DimAccount.csv? [y]es, [n]o, [A]ll, [N]one, [r]ename: "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "-ae-ZCj3cFiB"
       },
@@ -25,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "jL2ETsy7cQf8"
       },
@@ -44,13 +94,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "K7TeA78GeIX-",
-        "outputId": "6feb64cc-8953-483e-eb2a-f0a3389ba666"
+        "outputId": "0dd46db2-5451-4c16-cdb7-75f0462be0ec"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,13 +144,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "E_W2UKb2ONTz",
-        "outputId": "da5bdf89-37ea-48d7-ec13-a18e57d676a8"
+        "outputId": "e405c7ce-e752-45bb-cf1c-4925d6e8aec4"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,13 +197,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "wP8zbIVvePtn",
-        "outputId": "6c827f08-b9aa-4c10-a272-713ec4510f88"
+        "outputId": "d85edc11-7678-4931-fe10-79808c81d311"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,13 +230,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "p1yu50SHOxo7",
-        "outputId": "5764aef6-28f6-43a8-c80e-8d4f42f56c29"
+        "outputId": "93631018-de29-4c34-bebe-75250101d5c5"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -226,13 +272,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "zZwvtjOxOx4Q",
-        "outputId": "5d05edc8-1cef-4af4-c944-d2226d2a1316"
+        "outputId": "67284ee6-416c-4182-f16f-a6ebdd1fcf44"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,13 +304,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "M0FbgkZbkqiq",
-        "outputId": "3fba4a9c-869f-43dd-caac-07683af5ba2d"
+        "outputId": "e9044c2b-2d88-4405-c5ef-1cd9dbd0a8fc"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,13 +340,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "jdvHkdD7o86o",
-        "outputId": "7c5b9ba1-525a-4b99-94ae-ec27c82f183f"
+        "outputId": "8f0dbdb7-77ba-4955-e0c7-32e1fb733ce6"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,7 +365,7 @@
       "metadata": {
         "id": "BtNIabmvjP0z"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -334,13 +377,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "8xTtB1ZxiOeF",
-        "outputId": "35d3cd8f-b0e8-482f-e332-3ff2b1c2e963"
+        "outputId": "26de2504-1cb2-4abf-dd22-c689cfe2a546"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -382,9 +424,9 @@
           "height": 276
         },
         "id": "MUTgtWaAiU0q",
-        "outputId": "9c4b711c-e9bb-4225-a795-a1ec12be42c8"
+        "outputId": "b748b9d4-0d3d-4aac-d2d6-8758ebb3c615"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -394,7 +436,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 10
         },
         {
           "output_type": "display_data",
@@ -419,9 +461,9 @@
           "height": 259
         },
         "id": "2qUoMIJ0llbs",
-        "outputId": "c0a03006-7319-45ae-a521-942df20e9fc8"
+        "outputId": "b07b2d99-64a2-4014-9473-da79f636ee52"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -431,7 +473,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 14
         },
         {
           "output_type": "display_data",
@@ -462,9 +504,9 @@
           "height": 348
         },
         "id": "MFS4ESB9Tt-M",
-        "outputId": "0f113653-6c83-4b80-9394-a363a45fa1f7"
+        "outputId": "7a749e9a-ebef-4a2d-d630-c05ece95b77b"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -502,15 +544,15 @@
           "height": 316
         },
         "id": "zcypag6VcC4-",
-        "outputId": "2b657e82-0cb8-499f-c9d8-1344aa039b4e"
+        "outputId": "459731d8-87f9-4e78-8ecb-a0e7fea0cfc9"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-17-61dae4333b46>:4: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+            "<ipython-input-15-61dae4333b46>:4: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
             "  sns.heatmap(sales.toPandas().corr(),\n"
           ]
         },
@@ -548,7 +590,7 @@
       "metadata": {
         "id": "Y_p5GmWgTuWW"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -557,7 +599,7 @@
       "metadata": {
         "id": "K9fZ0rbbkqrN"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -576,13 +618,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "KtD5inCrgoXg",
-        "outputId": "45485f2a-2f1f-4830-9f30-5afbc515e541"
+        "outputId": "509a7501-48eb-43a5-ff71-74aecd075320"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -614,9 +655,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 254
         },
-        "outputId": "8905bcc0-5143-4c64-eb87-518c87224ea6"
+        "outputId": "8915283b-080b-4f35-cec6-04c1d491f541"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -626,7 +667,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 18
         },
         {
           "output_type": "display_data",
@@ -653,9 +694,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 253
         },
-        "outputId": "35cd00d5-8bcb-4be5-c83d-d3522398f75a"
+        "outputId": "9fea8973-7653-4964-c9b4-4afb5497ba43"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -682,9 +723,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 221
         },
-        "outputId": "761bcbb6-5a42-47ae-b14b-f57434876345"
+        "outputId": "6a29e45f-3bc8-4597-a3db-1cf517f20a7a"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -709,9 +750,9 @@
           "height": 254
         },
         "id": "zYgjjAYpq7D9",
-        "outputId": "096da84b-8cd6-4383-ab3e-2cce0e4f421f"
+        "outputId": "50bf088b-4094-4e88-b5dc-fdcda6882e3a"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -721,7 +762,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 21
         },
         {
           "output_type": "display_data",
@@ -746,9 +787,9 @@
           "height": 254
         },
         "id": "o-krcO_aw-Xq",
-        "outputId": "968de129-e434-4612-dca5-2452f6d31fff"
+        "outputId": "a7cdf6ec-e820-442b-90d1-ccce7b63c1f8"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -758,7 +799,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 52
+          "execution_count": 22
         },
         {
           "output_type": "display_data",
@@ -783,9 +824,9 @@
           "height": 254
         },
         "id": "RT5DCn4Vx0rn",
-        "outputId": "1fe19b31-906b-4051-debf-15782f38d062"
+        "outputId": "d73b149e-9288-4879-ec1c-a4ca1dadfe82"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -795,7 +836,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 53
+          "execution_count": 23
         },
         {
           "output_type": "display_data",
@@ -823,9 +864,9 @@
           "height": 188
         },
         "id": "Gqmgxjy9tzrr",
-        "outputId": "a2bb50e0-3335-4b92-802c-3190b3ed02c8"
+        "outputId": "ceb7e34e-f49b-4078-fac7-7f5140fe22cf"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -851,9 +892,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 218
         },
-        "outputId": "76f67b7c-7a3d-480a-b26c-3b7aa9d24174"
+        "outputId": "3681ec5e-6411-43d9-dac3-a555710e6134"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -863,7 +904,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 57
+          "execution_count": 25
         },
         {
           "output_type": "display_data",
@@ -888,9 +929,9 @@
           "height": 234
         },
         "id": "cN3CY6lKvmWe",
-        "outputId": "26f8f5dc-eef4-4ed0-cba4-a0f11ecb086c"
+        "outputId": "1ce2f3da-471e-4e30-f512-05875200be1d"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -900,7 +941,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 64
+          "execution_count": 26
         },
         {
           "output_type": "display_data",
@@ -925,9 +966,9 @@
           "height": 231
         },
         "id": "JPdpc0ojvmpx",
-        "outputId": "6c246b28-127b-414e-9554-e7f55dec2a02"
+        "outputId": "7c7b0a8a-52d1-42a0-fe08-b2adac97a227"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -937,7 +978,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 66
+          "execution_count": 27
         },
         {
           "output_type": "display_data",
@@ -968,7 +1009,7 @@
       "metadata": {
         "id": "mmENtMChnbJB"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -978,13 +1019,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "XudbD7SL03FM",
-        "outputId": "c1867add-504b-4c7c-9927-3277ad1afea9"
+        "outputId": "7a4c95b6-d178-4a5d-b33a-0b103af1d2da"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1022,9 +1062,109 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from pyspark.ml.regression import LinearRegression\n",
+        "from pyspark.ml.feature import VectorAssembler\n",
+        "from pyspark.ml.evaluation import RegressionEvaluator"
+      ],
       "metadata": {
         "id": "T7LQlegR03NH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# Assemble features into a single vector column\n",
+        "assembler = VectorAssembler(inputCols=['UnitPrice', 'ProductStandardCost','TaxAmt', 'Freight'  ], outputCol='features')\n",
+        "df_assembled = assembler.transform(df)"
+      ],
+      "metadata": {
+        "id": "lOglZabiYoul"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Splitiing the data into training and testing sets\n",
+        "(training_data, test_data) = df_assembled.randomSplit([0.8, 0.2], seed=1234)"
+      ],
+      "metadata": {
+        "id": "hVx4XCdAJBu2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# creating a Linear Regression model\n",
+        "lr = LinearRegression(featuresCol='features', labelCol='SalesAmount')"
+      ],
+      "metadata": {
+        "id": "Hw-Y_AUEJB1X"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lr_model = lr.fit(training_data)"
+      ],
+      "metadata": {
+        "id": "TrEVOpzaJB6Y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions = lr_model.transform(test_data)\n",
+        "predictions.select(\"prediction\", \"SalesAmount\", \"features\").show()"
+      ],
+      "metadata": {
+        "id": "UNzlFoWJh2DF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyspark.ml.evaluation import RegressionEvaluator\n",
+        "evaluator = RegressionEvaluator(labelCol=\"SalesAmount\", predictionCol=\"prediction\", metricName=\"rmse\")\n",
+        "rmse = evaluator.evaluate(predictions)\n",
+        "print(\"Root Mean Squared Error (RMSE) on test data = {:.2f}\".format(rmse))"
+      ],
+      "metadata": {
+        "id": "ykp9wIlAh2Ld",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "410de022-4804-4902-e11e-2885c09772a0"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Root Mean Squared Error (RMSE) on test data = 0.00\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "gjnu3KLQh2Qf"
       },
       "execution_count": null,
       "outputs": []
@@ -1033,7 +1173,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO52/pj8NS5v2zTAfKmhnJ0"
+      "authorship_tag": "ABX9TyPRHY1OzpiaET3R4cAtBWih",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
